Revert "Update index.html"
This reverts commit 150ecd64939e800ebe0373f23a7b32740dbb6f99.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="profile">
     <img src="img/pp.jpg" class="profile__picture" alt="Clement Froehlich picture">
     <h1>
-      Hello World, it's a final task ! Exercise 1.9 Git & Version Control !
+      Hello World, it's a final task ! Exercise 1.8 Preprocessors & Variables
     </h1>
     <p>
       My  name is Clément Froehlich
