--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="profile">
     <img src="img/pp.jpg" class="profile__picture" alt="Clement Froehlich picture">
     <h1>
-      Hello World, it's a final task ! Exercise 1.9
+      Hello World ! Here is my Portofolio
     </h1>
     <p>
       My  name is Clément Froehlich
