--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       My  name is Clément Froehlich
     </p>
     <p>
-      I'm a web developer from France.
+      I'm a web developer from France !
     </p>
     <a href="work.html" class="button">Check out some of my code</a>
     <a href="about.html" class="button">More about me</a>
