--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="img/logo.jpg" alt="logo" class="page-header__item" />
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -72,9 +71,18 @@
     <footer class="page-footer">
       <p>Find me on</p>
       <div class="social-media">
-        <img src="svg/github_icon.svg" alt="Github" />
-        <img src="svg/facebook_icon.svg" alt="Facebook" />
-        <img src="svg/linkedin_icon.svg" alt="Linkedin" />
+        <a href="https://github.com/Clemfrl" target="_blank">
+          <img src="svg/github_icon.svg" alt="Github" class="social__logo" />
+        </a>
+        <a href="https://www.instagram.com/clemfrl/" target="_blank">
+          <img src="svg/facebook_icon.svg" alt="Facebook" />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/cl%C3%A9ment-froehlich-42566bb7/"
+          target="_blank"
+        >
+          <img src="svg/linkedin_icon.svg" alt="Linkedin" />
+        </a>
       </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
