--- a/work.html
+++ b/work.html
@@ -1,95 +1,184 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Clement Portofolio</title>
-  <link rel="short icon" href="img/favicon.png"/>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Karla&family=Rubik:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/styles.production.css">
-</head>
-<body>
-  <header class="page-header">
-    <img src="img/logo.jpg" alt="logo" class="page-header__item">
-    <nav class="main-navigation page-header__item">
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-          <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-        </li >
-        <li role="presentation">
-          <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a>
-        </li>
-        <li role="presentation">
-          <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
-        </li>
-        <li role="presentation">
-          <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Clement Portofolio</title>
+    <link rel="short icon" href="img/favicon.png" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla&family=Rubik:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
+  </head>
+  <body>
+    <header class="page-header">
+      
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <a
+              href="index.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >Home</a
+            >
+          </li>
+          <li role="presentation">
+            <a
+              href="about.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >About</a
+            >
+          </li>
+          <li role="presentation">
+            <a
+              href="work.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >Work</a
+            >
+          </li>
+          <li role="presentation">
+            <a
+              href="contact.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-  <section>
-    <div class="grid-tittle">
-      <h1>My Work</h1>
-    </div>
-    <div class="grid">
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on Github</a>
+    <section>
+      <div class="page-title">
+        My Work
       </div>
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on Github</a>
+      <div class="grid">
+        <div class="grid__item">
+          <h2>Pokedex App</h2>
+          <p>
+            This project consisted in creating a JavaScript application using a
+            Pokedex API. On this pokedex, you can consult all the information on
+            the Pokémons of the 1st generation.
+          </p>
+          <a
+            href="https://github.com/Clemfrl/Pokedex-final-edition"
+            target="_blank"
+            >See project on Github</a
+          >
+          <a
+            href="https://clemfrl.github.io/Pokedex-final-edition/"
+            target="_blank"
+            >// See the hosted project</a
+          >
+        </br>
+        <img
+            class="img-work"
+            src="img/pokemon.png"
+            alt="pokemon"
+          />
+        </div>
+        <div class="grid__item">
+          <h2>myFlix App</h2>
+          <p>
+            This is an application build on React that allows you to consult a
+            list of movies and add them to your favorites by creating a personal
+            account. You have can also check directors and genres info.
+          </p>
+          <a href="https://github.com/Clemfrl/movie_api" target="_blank"
+            >See project on Github</a
+          >
+        </br>
+        <img
+            class="img-work"
+            src="img/myflix.png"
+            alt="myFlix"
+          />
+        </div>
+        <div class="grid__item">
+          <h2>myChat App</h2>
+          <p>
+            It is an application developed with React Native and Gifted Chat,
+            which allows you to chat with friends, but also to send photos and
+            GPS coordinates
+          </p>
+          <a href="https://github.com/Clemfrl/MyChatApp" target="_blank"
+            >See project on Github</a
+          > </br>
+          <img
+            class="img-work"
+            src="img/chat.png"
+            alt="MyChatApp"
+          />
+        </div>
+        <div class="grid__item">
+          <h2>Todo App</h2>
+          <p>
+            It is a simple application created on Vue, which allows you to
+            create a To Do List. The functions of adding and deleting tasks have
+            been added.
+          </p>
+          <a href="https://github.com/Clemfrl/todo-app" target="_blank"
+            >See project on Github</a
+          >
+          <a href="https://clemfrl.github.io/todo-app/" target="_blank"
+            >// See the hosted project</a
+          >
+        </br>
+        <img
+            class="img-work"
+            src="img/todo.png"
+            alt="todolist"
+          />
+        </div>
+        <div class="grid__item">
+          <h2>Mobile web app</h2>
+          <p>
+            Within this project, I was responsible for the frontend. It’s
+            written in React.js. Additionally, I've created the HTML and CSS
+            templates.
+          </p>
+          <a href="#">See project on Github</a>
+          <a href="https://github.com/Clemfrl/movie_api" target="_blank"
+            >// See the hosted project</a
+          >
+        </div>
+        <div class="grid__item">
+          <h2>Your Project?</h2>
+          <p>
+            Do not hesitate to contact me so that we can discuss future projects
+            together!
+          </p>
+          <a class="link-contact-me" href="contact.html">Contact me</a>
+        </div>
       </div>
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on Github</a>
-      </div>
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on Github</a>
-      </div>
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on Github</a>
-      </div>
-      <div class="grid__item">
-        <h2>Your Project?</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a class="link-contact-me" href="#">Contact me</a>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <footer class="page-footer">
-    <p>
-      Find me on
-    </p>
-    <div class="social-media">
-      <img src="svg/github_icon.svg" alt="Github">
-      <img src="svg/facebook_icon.svg" alt="Facebook">
-      <img src="svg/linkedin_icon.svg" alt="Linkedin">
-    </div>
-  </footer>
-  <script src="js/tota11y.min.js"></script>
-</body>
+    <footer class="page-footer">
+      <p>Find me on</p>
+      <div class="social-media">
+        <a href="https://github.com/Clemfrl" target="_blank">
+          <img src="svg/github_icon.svg" alt="Github" class="social__logo" />
+        </a>
+        <a href="https://www.instagram.com/clemfrl/" target="_blank">
+          <img src="svg/facebook_icon.svg" alt="Facebook" />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/cl%C3%A9ment-froehlich-42566bb7/"
+          target="_blank"
+        >
+          <img src="svg/linkedin_icon.svg" alt="Linkedin" />
+        </a>
+      </div>
+    </footer>
+    <script src="js/tota11y.min.js"></script>
+  </body>
 </html>
