changed the layout // New design and graphic chart

--- a/about.html
+++ b/about.html
@@ -55,39 +55,38 @@
         </ul>
       </nav>
     </header>
-    <div class="about-title">About</div>
-    <div class="about-text">
-      <p>
-        After 5 years as a project manager in a advertising agency. I decided to
-        change my life a bit. Lorem ipsum dolor sit amet, consectetur adipiscing
-        elit. Praesent in fermentum nisi, at ultrices libero. Nunc vehicula
-        consectetur ante ac facilisis. Praesent ac volutpat nisl. Quisque sed
-        elit pulvinar, facilisis metus id, interdum massa. Donec venenatis diam
-        dui, eget pretium nunc varius vitae. Donec vestibulum vel ante non
-        aliquet. Donec in orci in augue faucibus lobortis nec ac sem. Phasellus
-        viverra iaculis lacinia. Vestibulum ultrices est et scelerisque
-        scelerisque. Quisque consequat lorem turpis, ut elementum nunc
-        pellentesque eu.
-      </p>
+    <div class="about-page">
+      <div class="hello-title">About<span style="color: #b90808">.</span></div>
+      <div class="about-text">
+        <p>
+          After a master's degree in marketing, I worked in several advertising
+          agencies. My last experience was in an agency specialized in the
+          communication of luxury brands on the web. That's when I got the
+          desire to work in this sector, touching a little bit of everything as
+          a project manager. This job allowed me to make a perfect transition
+          towards my new professional goal. Today I code on html, css, js,
+          React. I'm always on the lookout for opportunities, contact me if you
+          need me!
+        </p>
+      </div>
+      <div class="skills-text">
+        <h3>current skills <span style="color: #b90808">:</span></h3>
+        <p>
+          Project managment : 5 years <br />
+          Creative design : 3 years <br />
+          Web development: 1 year
+        </p>
+        <p>
+          <a
+            href="https://www.linkedin.com/in/cl%C3%A9ment-froehlich-42566bb7/"
+            target="_blank"
+            class="hvr-sweep-to-left"
+            download
+            >Check out my CV</a
+          >
+        </p>
+      </div>
     </div>
-    <div class="skills-text">
-      <h3>Here are my current skills :</h3>
-      <p>
-        Project managment : 5 years <br />
-        Creative design : 3 years <br />
-        Web development: 1 year
-      </p>
-      <p>
-        <a
-          href="https://www.linkedin.com/in/cl%C3%A9ment-froehlich-42566bb7/"
-          target="_blank"
-          class="button"
-          download
-          >Check out my CV</a
-        >
-      </p>
-    </div>
-
     <footer class="page-footer">
       <p>Find me on</p>
       <div class="social-media">
