--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@
         </ul>
       </nav>
     </header>
-    <div class="hello-title">Hello<span style="color:#B90808">!</span></div>
+    <div class="hello-title">Hello!</div>
     <div class="profile">
       <img
         src="img/pp1.png"
@@ -70,19 +70,19 @@
         about me and check my career.
       </p>
 
-      <a href="work.html" class="hvr-sweep-to-right">Check out some of my code</a>
-      <a href="about.html" class="hvr-sweep-to-left">More about me !</a>
+      <a href="work.html" class="button">Check out some of my code</a>
+      <a href="about.html" class="button">More about me !</a>
     </div>
 </div>
 
 <footer class="page-footer flex fixed">
   <div class="social__media flex">
       <a href="https://github.com/stephanierlandry" target="_blank">
-        <img src="svg/github_icon.svg" alt="Github" class="social__logo">
+        <img src="img/github.svg" alt="Github" class="social__logo">
       </a>
-      <img src="svg/facebook_icon.svg" alt="Twitter" class="social__logo">
+      <img src="img/twitter.svg" alt="Twitter" class="social__logo">
       <a href="https://www.linkedin.com/in/stephanierlandry/" target="_blank">
-        <img src="svg/linkedin_icon.svg" alt="LinkedIn" class="social__logo">
+        <img src="img/linkedin.svg" alt="LinkedIn" class="social__logo">
       </a>
   </div>
 </footer>
