--- a/work.html
+++ b/work.html
@@ -58,11 +58,10 @@
     </header>
 
     <section>
-      <div class="page-title">
-        My Work
-      </div>
+      <div class="about-page">
+        <div class="hello-title">My Work<span style="color: #b90808">.</span></div>
       <div class="grid">
-        <div class="grid__item">
+        <div class="grid__item hvr-overline-reveal">
           <h2>Pokedex App</h2>
           <p>
             This project consisted in creating a JavaScript application using a
@@ -86,7 +85,7 @@
             alt="pokemon"
           />
         </div>
-        <div class="grid__item">
+        <div class="grid__item hvr-overline-reveal">
           <h2>myFlix App</h2>
           <p>
             This is an application build on React that allows you to consult a
@@ -103,7 +102,7 @@
             alt="myFlix"
           />
         </div>
-        <div class="grid__item">
+        <div class="grid__item hvr-overline-reveal">
           <h2>myChat App</h2>
           <p>
             It is an application developed with React Native and Gifted Chat,
@@ -119,7 +118,7 @@
             alt="MyChatApp"
           />
         </div>
-        <div class="grid__item">
+        <div class="grid__item hvr-overline-reveal">
           <h2>Todo App</h2>
           <p>
             It is a simple application created on Vue, which allows you to
@@ -139,7 +138,7 @@
             alt="todolist"
           />
         </div>
-        <div class="grid__item">
+        <div class="grid__item hvr-overline-reveal">
           <h2>Mobile web app</h2>
           <p>
             Within this project, I was responsible for the frontend. It’s
@@ -151,7 +150,7 @@
             >// See the hosted project</a
           >
         </div>
-        <div class="grid__item">
+        <div class="grid__item hvr-overline-reveal">
           <h2>Your Project?</h2>
           <p>
             Do not hesitate to contact me so that we can discuss future projects
@@ -159,6 +158,7 @@
           </p>
           <a class="link-contact-me" href="contact.html">Contact me</a>
         </div>
+      </div>
       </div>
     </section>
 
@@ -178,6 +178,7 @@
           <img src="svg/linkedin_icon.svg" alt="Linkedin" />
         </a>
       </div>
+    
     </footer>
     <script src="js/tota11y.min.js"></script>
   </body>
