--- a/contact.html
+++ b/contact.html
@@ -55,65 +55,69 @@
         </ul>
       </nav>
     </header>
-    <div class="about-title">Contact</div>
-    <div class="contact-block">
-      Clément Froehlich<br />
-      Rudi-Arndt Strasse 3 <br />
-      10407 Berlin <br />
-      Deutschland <br />
-      <br />
-      Tel: <a href="+33617312410">+33617312410</a>
-      <br />
-      Skype: <a href="skype:clement.froehlich@gmail.com">Clemfrl</a><br />
-      Email:
-      <a href="mailto:clement.froehlich@gmail.com"
-        >clement.froehlich@gmail.com</a
-      >
-    </div>
-    <div class="contact-formtext">
-      <form>
-        <ul class="form-style-1">
-          <li>
-            <h2>Contact Form</h2>
-            <label>Full Name <span class="required">*</span></label
-            ><input
-              type="text"
-              name="field1"
-              class="field-divided"
-              placeholder="First"
-            />
-            <input
-              type="text"
-              name="field2"
-              class="field-divided"
-              placeholder="Last"
-            />
-          </li>
-          <li>
-            <label>Email <span class="required">*</span></label>
-            <input type="email" name="field3" class="field-long" />
-          </li>
-          <li>
-            <label>Subject</label>
-            <select name="field4" class="field-select">
-              <option value="Front-end">Front-end</option>
-              <option value="Back-end">Back-end</option>
-              <option value="Full-stack">Full-stack</option>
-            </select>
-          </li>
-          <li>
-            <label>Your Message <span class="required">*</span></label>
-            <textarea
-              name="field5"
-              id="field5"
-              class="field-long field-textarea"
-            ></textarea>
-          </li>
-          <li>
-            <input type="submit" class="button" value="Submit" />
-          </li>
-        </ul>
-      </form>
+    <div class="about-page">
+      <div class="hello-title">
+        Contact<span style="color: #b90808">.</span>
+      </div>
+      <div class="contact-block">
+        Clément Froehlich<br />
+        Rudi-Arndt Strasse 3 <br />
+        10407 Berlin <br />
+        Deutschland <br />
+        <br />
+        Tel: <a href="+33617312410">+33617312410</a>
+        <br />
+        Skype: <a href="skype:clement.froehlich@gmail.com">Clemfrl</a><br />
+        Email:
+        <a href="mailto:clement.froehlich@gmail.com"
+          >clement.froehlich@gmail.com</a
+        >
+      </div>
+      <div class="contact-formtext">
+        <form>
+          <ul class="form-style-1">
+            <li>
+              <h2>Contact Form<span style="color: #b90808">.</span></h2>
+              <label>Full Name <span class="required">*</span></label
+              ><input
+                type="text"
+                name="field1"
+                class="field-divided"
+                placeholder="First"
+              />
+              <input
+                type="text"
+                name="field2"
+                class="field-divided"
+                placeholder="Last"
+              />
+            </li>
+            <li>
+              <label>Email <span class="required">*</span></label>
+              <input type="email" name="field3" class="field-long" />
+            </li>
+            <li>
+              <label>Subject</label>
+              <select name="field4" class="field-select">
+                <option value="Front-end">Front-end</option>
+                <option value="Back-end">Back-end</option>
+                <option value="Full-stack">Full-stack</option>
+              </select>
+            </li>
+            <li>
+              <label>Your Message <span class="required">*</span></label>
+              <textarea
+                name="field5"
+                id="field5"
+                class="field-long field-textarea"
+              ></textarea>
+            </li>
+            <li>
+              <input type="submit" class="button" value="Submit" />
+            </li>
+          </ul>
+        </form>
+      </div>
     </div>
 
     <footer class="page-footer">
