Fixed some layout bugs

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </ul>
       </nav>
     </header>
+    <div class="about-page">
     <div class="hello-title">Hello<span style="color:#B90808">!</span></div>
     <div class="profile">
       <img
@@ -74,18 +75,32 @@
       <a href="about.html" class="hvr-sweep-to-left">More about me !</a>
     </div>
 </div>
+</div>
 
-<footer class="page-footer flex fixed">
-  <div class="social__media flex">
-      <a href="https://github.com/stephanierlandry" target="_blank">
-        <img src="svg/github_icon.svg" alt="Github" class="social__logo">
-      </a>
-      <img src="svg/facebook_icon.svg" alt="Twitter" class="social__logo">
-      <a href="https://www.linkedin.com/in/stephanierlandry/" target="_blank">
-        <img src="svg/linkedin_icon.svg" alt="LinkedIn" class="social__logo">
-      </a>
-  </div>
-</footer>
+<footer class="page-footer">
+      <div class="social-media">
+        <a href="https://github.com/Clemfrl" target="_blank">
+          <img src="svg/github_icon.svg" alt="Github" class="social__logo" />
+        </a>
+        <a href="https://www.instagram.com/clemfrl/" target="_blank">
+          <img
+            src="svg/facebook_icon.svg"
+            class="social__logo"
+            alt="Facebook"
+          />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/cl%C3%A9ment-froehlich-42566bb7/"
+          target="_blank"
+        >
+          <img
+            src="svg/linkedin_icon.svg"
+            class="social__logo"
+            alt="Linkedin"
+          />
+        </a>
+      </div>
+    </footer>
     <script src="js/tota11y.min.js"></script>
   </body>
 </html>
