--- a/work.html
+++ b/work.html
@@ -163,22 +163,28 @@
     </section>
 
     <footer class="page-footer">
-      <p>Find me on</p>
       <div class="social-media">
         <a href="https://github.com/Clemfrl" target="_blank">
           <img src="svg/github_icon.svg" alt="Github" class="social__logo" />
         </a>
         <a href="https://www.instagram.com/clemfrl/" target="_blank">
-          <img src="svg/facebook_icon.svg" alt="Facebook" />
+          <img
+            src="svg/facebook_icon.svg"
+            class="social__logo"
+            alt="Facebook"
+          />
         </a>
         <a
           href="https://www.linkedin.com/in/cl%C3%A9ment-froehlich-42566bb7/"
           target="_blank"
         >
-          <img src="svg/linkedin_icon.svg" alt="Linkedin" />
+          <img
+            src="svg/linkedin_icon.svg"
+            class="social__logo"
+            alt="Linkedin"
+          />
         </a>
       </div>
-    
     </footer>
     <script src="js/tota11y.min.js"></script>
   </body>
