--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="intro-text-block"></div>
       <h1>Welcome to my Portofolio</h1>
       <p class="intro-text">
-        My name is Clément Froehlich and I'm a full stack french developper
+        My name is Clément Froehlich and I'm a full stack french developer
         based in Berlin. You can here take a look on my projects, learn more
         about me and check my career.
       </p>
