add meet app in work page

--- a/work.html
+++ b/work.html
@@ -125,7 +125,7 @@
             <img src="img/myflix.jpg" class="project__img" alt="pokedex-app" />
             <div class="img__description">
               <h1 class="project-title">myFlix App</h1>
-              <p class="project-text">This is an application build on React that allows you to consult a
+              <p class="project-text">This is an application built on React that allows you to consult a
                 list of movies and add them to your favorites by creating a personal
                 account.</p>
                 <a href="https://github.com/Clemfrl/movie_api" target="_blank" class="project-link"
@@ -134,8 +134,24 @@
             </div>
           </div>
           <div class="card">
-            <img src="img/comingsoon.jpg" class="project__img" alt="pokedex-app" />
-            
+            <img src="img/meetapp.jpg" class="project__img" alt="meetapp" />
+            <div class="img__description">
+              <h1 class="project-title">Meet App</h1>
+              <p class="project-text"> An applicatiom built on React that interact with the google calendar API. The app provides events from the calendar, the date, the place and the theme of the event </p>
+              <a
+              href="https://github.com/Clemfrl/meet"
+                target="_blank"
+                class="project-link"
+                >See project on Github</br></a
+              >
+              <a
+              href="https://clemfrl.github.io/meet/"
+                target="_blank"
+                class="project-link"
+                >See the hosted project</a
+              >
+              
+            </div>
           </div>
           <div class="card">
             <img src="img/yourproject.jpg" class="project__img" alt="pokedex-app" />
