--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Clement Portofolio</title>
+    <title>Clement Portfolio</title>
     <link rel="short icon" href="img/favicon.png" />
     <link
       rel="stylesheet"
@@ -64,7 +64,7 @@
         alt="Clement Froehlich picture"
       />
       <div class="intro-text-block"></div>
-      <h1>Welcome to my Portofolio</h1>
+      <h1>Welcome to my Portfolio</h1>
       <p class="intro-text">
         My name is Clément Froehlich and I'm a full stack french developer
         based in Berlin. You can here take a look on my projects, learn more
