--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Clement Portofolio</title>
+    <title>Clement Portfolio</title>
     <link rel="short icon" href="img/favicon.png" />
     <link
       rel="stylesheet"
