--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla&family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
   <body>
