--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <nav class="footer-nav">
           <ul>
             <li>
-              <a href="https://github.com/Clemfrl">
+              <a href="https://github.com/Clemfrl" target="_blank">
                 <i class="github"></i>
                 Github
               </a>
@@ -61,13 +61,14 @@
             <li>
               <a
                 href="https://www.linkedin.com/in/cl%C3%A9ment-froehlich-42566bb7/"
+                target="_blank"
               >
                 <i class="linkedin"></i>
                 Linkedin
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/clemfrl/">
+              <a href="https://www.instagram.com/clemfrl/" target="_blank">
                 <i class="insta"></i>
                 Instagram
               </a>
